feat: create user with email, do not let email update on profile update
